[gd_scene load_steps=3 format=2]

[ext_resource path="res://Utils/Scripts/DirectionController.gd" type="Script" id=1]
[ext_resource path="res://Utils/Scenes/DirectionButton.tscn" type="PackedScene" id=2]

[node name="DirectionController" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, -1.19209e-07, 0, 1.19209e-07, 1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="N" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 1.5, -3 )

[node name="W" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -3, 1.5, 0 )

[node name="E" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.5, 0 )

[node name="S" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 1.5, 3 )
[connection signal="pressed" from="N" to="." method="_on_N_pressed"]
[connection signal="pressed" from="W" to="." method="_on_W_pressed"]
[connection signal="pressed" from="E" to="." method="_on_E_pressed"]
[connection signal="pressed" from="S" to="." method="_on_S_pressed"]
